# MCP

./: .gitignore  .vercelignore  CW1_w1956126_DevhanDodampahala.ipynb  HOW_TO_RUN.md  QUICK_START.md  README.md  SETUP_GUIDE.md  _config.yml  app.py  index.html  main.py  model.py  pyproject.toml  requirements.txt  run.sh  start.py  train_model.py
.github/workflows/: jekyll-gh-pages.yml
api/: index.py
static/css/: style.css
static/js/: results.js  script.js
templates/: index.html  results.html
